# task_4

./: .gitignore  docker-compose.yaml
parser/: config.py  database.py  download.py  parser.py  processing.py  pyproject.toml  repository.py
parser/models/: __init__.py  base.py  trading_result.py
parser/utils/: timer.py
